[gd_scene load_steps=7 format=3 uid="uid://ds85ty7g5kx0o"]

[ext_resource type="Script" uid="uid://kffuf45rdkid" path="res://scripts/ui/audio/audio.gd" id="1_uebln"]
[ext_resource type="FontFile" uid="uid://bydt2xc6trnm0" path="res://assets/fonts/Squares.ttf" id="2_y3erf"]

[sub_resource type="LabelSettings" id="LabelSettings_uebln"]
font = ExtResource("2_y3erf")
font_size = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y3erf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwlfy"]

[sub_resource type="LabelSettings" id="LabelSettings_y3erf"]
font = ExtResource("2_y3erf")
font_size = 6

[node name="Audio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uebln")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 74.0
grow_horizontal = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MasterVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_uebln")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_y3erf")

[node name="MusicVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_uebln")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_cwlfy")

[node name="SoundEffectsVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SoundEffectsVolume"]
layout_mode = 2
text = "Sound Effects Volume"
label_settings = SubResource("LabelSettings_y3erf")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/SoundEffectsVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SoundEffectsHSlider" type="HSlider" parent="MarginContainer/VBoxContainer/SoundEffectsVolume"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2

[connection signal="value_changed" from="MarginContainer/VBoxContainer/MasterVolume/MasterHSlider" to="." method="_on_master_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicVolume/MusicHSlider" to="." method="_on_music_h_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/SoundEffectsVolume/SoundEffectsHSlider" to="." method="_on_sound_effects_h_slider_value_changed"]
